--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     environment:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: rootpwd
+    volumes:
+         - ./init_db.sql:/docker-entrypoint-initdb.d/initdb.sql
 
   
   adminer:
